--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,126 @@
 layout: default
 ---
 
-<div class="home">
-    <img src="{{ "/assets/images/member.png" | relative_url }}">
-</div>
+
+<header class="masthead">
+    <div class="container px-5">
+        <div class="row gx-5 align-items-center">
+            <div class="col-lg-6">
+                <!-- Mashead text and app badges-->
+                <div class="mb-5 mb-lg-0 text-center text-lg-start">
+                    <h1 class="display-1 lh-1 mb-3">七七会员系统</h1>
+                    <p class="lead fw-normal text-muted mb-5">免费的会员管理系统，拥有简洁时尚的洁面，支持金额卡，次卡，年卡，月卡，周卡等，适用于美容美发，汽车服务，教育培训等各种充值消费的场景，为您的事业保驾护航。</p>
+                    <div class="d-flex flex-column flex-lg-row align-items-center">
+                        <a class="d-flex flex-column flex-lg-row align-items-center download-container" href="#!">
+                            <img src="{{ "/assets/images/windows-logo.png" | relative_url }}"  />
+                            <span class="text-muted">Windows版下载</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <!-- Masthead device mockup feature-->
+                <div class="app-img">
+                    <img src="{{ "/assets/images/member.png" | relative_url }}" />
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<!-- Quote/testimonial aside-->
+<aside class="text-center bg-gradient-primary-to-secondary">
+    <div class="container px-5">
+        <div class="row gx-5 justify-content-center">
+            <div class="col-xl-8">
+                <div class="h2 fs-1 text-white mb-4">免费，简洁，高效，让会员管理更简单</div>
+            </div>
+        </div>
+    </div>
+</aside>
+<!-- App features section-->
+<section id="features">
+    <div class="container px-5">
+        <div class="row gx-5 align-items-center">
+            <div class="col-lg-8 order-lg-1 mb-5 mb-lg-0">
+                <div class="container-fluid px-5">
+                    <div class="row gx-5">
+                        <div class="col-md-6 mb-5">
+                            <!-- Feature item-->
+                            <div class="text-center">
+                                <div class="icon-feature text-gradient mb-3">
+                                    <img src="{{ "/assets/icon/hair.svg" | relative_url }}" />
+                                </div>
+                                <h3 class="font-alt">美容美发</h3>
+                                <p class="text-muted mb-0">可以自定各种套餐，生日高亮提醒，搜索方便支持手机号后4位搜索会员</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-5">
+                            <!-- Feature item-->
+                            <div class="text-center">
+                                <div class="icon-feature text-gradient mb-3">
+                                    <img src="{{ "/assets/icon/car.svg" | relative_url }}" />
+                                </div>
+                                <h3 class="font-alt">汽车维修</h3>
+                                <p class="text-muted mb-0">可以开启车牌号，支持车牌数字搜素</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 mb-5 mb-md-0">
+                            <!-- Feature item-->
+                            <div class="text-center">
+                                <div class="icon-feature text-gradient mb-3">
+                                    <img src="{{ "/assets/icon/education.svg" | relative_url }}" />
+                                </div>
+                                <h3 class="font-alt">教育培训</h3>
+                                <p class="text-muted mb-0">支持次卡，可以用于按课次消费，支持员工操作记录查询</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <!-- Feature item-->
+                            <div class="text-center">
+                                <div class="icon-feature text-gradient mb-3">
+                                    <img src="{{ "/assets/icon/children.svg" | relative_url }}" />
+                                </div>
+                                <h3 class="font-alt">娱乐消费</h3>
+                                <p class="text-muted mb-0">金额卡，次卡，不限次数卡，多卡种，适用于各种充值消费的场景</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 order-lg-0">
+                <div class="app-img">
+                    <img src="{{ "/assets/images/package.png" | relative_url }}" />
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Basic features section-->
+<section class="bg-light">
+    <div class="container px-5">
+        <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
+            <div class="col-12 col-lg-5">
+                <h2 class="display-4 lh-1 mb-4">免费界面简洁时尚</h2>
+                <p class="lead fw-normal text-muted mb-5 mb-lg-0">使用现代化的设计语言，界面大方操作方便，支持手动数据备份和恢复</p>
+            </div>
+            <div class="col-sm-8 col-md-6">
+                <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle" src="{{ "/assets/images/home.png" | relative_url }}" /></div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- App badge section-->
+<section class="bg-gradient-primary-to-secondary" id="download">
+    <div class="container px-5">
+        <h2 class="text-center text-white font-alt mb-4">立即下载</h2>
+        <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
+            <a class="d-flex flex-column flex-lg-row align-items-center download-container border-white" href="#!">
+                <img src="{{ "/assets/images/windows-logo.png" | relative_url }}"  />
+                <span class="text-white">Windows版下载</span>
+            </a>
+        </div>
+    </div>
+</section>
