update conact info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,11 +6,9 @@
           <script>
             document.getElementById('current-year').innerHTML = new Date().getFullYear();
           </script>
-          <a href="#!">Privacy</a>
+          <a target="_blank" href="//github.com/member77/website">Github</a>
           <span class="mx-1">&middot;</span>
-          <a href="#!">Terms</a>
-          <span class="mx-1">&middot;</span>
-          <a href="#!">FAQ</a>
+          <a href="mailto:wandaijin@outlook.com">联系我们</a>
       </div>
   </div>
 </footer>
