--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
                 <!-- Mashead text and app badges-->
                 <div class="mb-5 mb-lg-0 text-center text-lg-start">
                     <h1 class="display-1 lh-1 mb-3">七七会员系统</h1>
-                    <p class="lead fw-normal text-muted mb-5">免费的会员管理系统，拥有简洁时尚的洁面，支持金额卡，次卡，年卡，月卡，周卡等，适用于美容美发，汽车服务，教育培训等各种充值消费的场景，为您的事业保驾护航。</p>
+                    <p class="lead fw-normal text-muted mb-5">免费的会员管理系统，拥有简洁时尚的界面，支持金额卡，次卡，年卡，月卡，周卡等，适用于美容美发，汽车服务，教育培训等各种充值消费的场景，为您的事业保驾护航。</p>
                     <div class="d-flex flex-column flex-lg-row align-items-center">
                         <div class="d-flex flex-column  download-container m-1" >
                             <a class ="d-flex flex-row  align-items-center"  target="_blank" href="https://pan.baidu.com/s/16jXQsNXaZgKvK8Z6dIxvXA">
@@ -45,7 +45,7 @@ layout: default
     <div class="container px-5">
         <div class="row gx-5 justify-content-center">
             <div class="col-xl-8">
-                <div class="h2 fs-1 text-white mb-4">免费，简洁，高效，让会员管理更简单</div>
+                <div class="h2 fs-1 text-white mb-4">免费，美观，高效，让会员管理更简单</div>
             </div>
         </div>
     </div>
@@ -64,7 +64,7 @@ layout: default
                                     <img src="{{ "/assets/icon/hair.svg" | relative_url }}" />
                                 </div>
                                 <h3 class="font-alt">美容美发</h3>
-                                <p class="text-muted mb-0">可以自定各种套餐，生日高亮提醒，搜索方便支持手机号后4位搜索会员</p>
+                                <p class="text-muted mb-0">可以自定义各种套餐，生日高亮，搜索方便，支持手机号后4位搜索</p>
                             </div>
                         </div>
                         <div class="col-md-6 mb-5">
@@ -74,7 +74,7 @@ layout: default
                                     <img src="{{ "/assets/icon/car.svg" | relative_url }}" />
                                 </div>
                                 <h3 class="font-alt">汽车维修</h3>
-                                <p class="text-muted mb-0">可以开启车牌号，支持车牌数字搜素</p>
+                                <p class="text-muted mb-0">可以开启车牌号字段，支持车牌数字搜素</p>
                             </div>
                         </div>
                     </div>
@@ -115,8 +115,8 @@ layout: default
     <div class="container px-5">
         <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
             <div class="col-12 col-lg-5">
-                <h2 class="display-4 lh-1 mb-4">免费界面简洁时尚</h2>
-                <p class="lead fw-normal text-muted mb-5 mb-lg-0">使用现代化的设计语言，界面大方操作方便，支持手动数据备份和恢复</p>
+                <h2 class="display-4 lh-1 mb-4">免费界面 简洁时尚</h2>
+                <p class="lead fw-normal text-muted mb-5 mb-lg-0">使用现代化的设计语言，界面大方，操作方便，支持手动数据备份和恢复</p>
             </div>
             <div class="col-sm-8 col-md-6">
                 <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle" src="{{ "/assets/images/home.png" | relative_url }}" /></div>
