--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,20 +13,20 @@ layout: default
                     <p class="lead fw-normal text-muted mb-5">免费的会员管理系统，拥有简洁时尚的界面，支持金额卡，次卡，年卡，月卡，周卡等，适用于美容美发，汽车服务，教育培训等各种充值消费的场景，为您的事业保驾护航。</p>
                     <div class="d-flex flex-column flex-lg-row align-items-center">
                         <div class="d-flex flex-column  download-container m-1" >
-                            <a class ="d-flex flex-row  align-items-center"  target="_blank" href="https://pan.baidu.com/s/16jXQsNXaZgKvK8Z6dIxvXA">
+                            <a class ="d-flex flex-row  align-items-center"  target="_blank" href="https://pan.baidu.com/s/13FBI_gUPRoWFcNAtJRu1xw">
                                 <img src="{{ "/assets/images/windows-logo.png" | relative_url }}"  />
-                                <span class="text-muted fw-bold">Win10版下载</span>
+                                <span class="text-muted fw-bold">[64位]Win版下载</span>
                             </a>
-                            <div class="fs-6 text-muted fw-lighter"><span class="ms-1 fw-normal">提取码: 87pc</span></div>
+                            <div class="fs-6 text-muted fw-lighter">Win7/Win8/Win10<span class="ms-1 fw-normal">提取码: qhvr</span></div>
                         </div>
 
 
                         <div class="d-flex flex-column download-container m-1">
-                            <a class ="d-flex flex-row  align-items-center" target="_blank" href="https://pan.baidu.com/s/1sOEl2LghOm28hotxKwMkig">
+                            <a class ="d-flex flex-row  align-items-center" target="_blank" href="https://pan.baidu.com/s/15yw0H8PRK9KhKZYcGuJXNA">
                                 <img src="{{ "/assets/images/apple-logo.svg" | relative_url }}"  />
                                 <span class="text-muted fw-bold">Mac版下载</span>
                             </a>
-                            <div class="fs-6 text-muted fw-lighter">macOS 10.11及更高版本 <span class="ms-1 fw-normal">提取码: t5dc</span></div>
+                            <div class="fs-6 text-muted fw-lighter">macOS 10.11及更高版本 <span class="ms-1 fw-normal">提取码: m34a</span></div>
                         </div>
                     </div>
                 </div>
@@ -131,19 +131,19 @@ layout: default
         <h2 class="text-center text-white font-alt mb-4">立即下载</h2>
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column  download-container  border-white m-1" >
-                <a class ="d-flex flex-row  align-items-center"  target="_blank" href="https://pan.baidu.com/s/16jXQsNXaZgKvK8Z6dIxvXA">
+                <a class ="d-flex flex-row  align-items-center"  target="_blank" href="https://pan.baidu.com/s/13FBI_gUPRoWFcNAtJRu1xw">
                     <img src="{{ "/assets/images/windows-logo.png" | relative_url }}"  />
-                    <span class="text-white fw-bold">Win10版下载</span>
+                    <span class="text-white fw-bold">[64位]Win版下载</span>
                 </a>
-                <div class="fs-6 text-white fw-lighter"><span class="ms-1 fw-normal">提取码: 87pc</span></div>
+                <div class="fs-6 text-white fw-lighter">Win7/Win8/Win10<span class="ms-1 fw-normal">提取码: qhvr</span></div>
             </div>
 
             <div class="d-flex flex-column download-container border-white m-1">
-                <a class ="d-flex flex-row  align-items-center" target="_blank" href="https://pan.baidu.com/s/1sOEl2LghOm28hotxKwMkig">
+                <a class ="d-flex flex-row  align-items-center" target="_blank" href="https://pan.baidu.com/s/15yw0H8PRK9KhKZYcGuJXNA">
                     <img src="{{ "/assets/images/apple-logo.svg" | relative_url }}"  />
                     <span class="text-white fw-bold">Mac版下载</span>
                 </a>
-                <div class="fs-6 text-white fw-lighter">macOS 10.11及更高版本 <span class="ms-1 fw-normal">提取码: t5dc</span></div>
+                <div class="fs-6 text-white fw-lighter">macOS 10.11及更高版本 <span class="ms-1 fw-normal">提取码: m34a</span></div>
             </div>
 
         </div>
