--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -115,7 +115,7 @@ layout: default
     <div class="container px-5">
         <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
             <div class="col-12 col-lg-5">
-                <h2 class="display-4 lh-1 mb-4">免费界面 简洁时尚</h2>
+                <h2 class="display-4 lh-1 mb-4">免费 <span class="mx-1">&middot;</span> 简洁 <span class="mx-1">&middot;</span> 强大</h2>
                 <p class="lead fw-normal text-muted mb-5 mb-lg-0">使用现代化的设计语言，界面大方，操作方便，支持手动数据备份和恢复</p>
             </div>
             <div class="col-sm-8 col-md-6">
