--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,11 +13,11 @@ layout: default
                     <p class="lead fw-normal text-muted mb-5">免费的会员管理系统，拥有简洁时尚的界面，支持金额卡，次卡，年卡，月卡，周卡等，适用于美容美发，汽车服务，教育培训等各种充值消费的场景，为您的事业保驾护航。</p>
                     <div class="d-flex flex-column flex-lg-row align-items-center">
                         <div class="d-flex flex-column  download-container m-1" >
-                            <a class ="d-flex flex-row  align-items-center"  target="_blank" href="https://pan.baidu.com/s/1NSDGUnkNkp4HCiWBa9J_lQ">
+                            <a class ="d-flex flex-row  align-items-center"  target="_blank" href="https://pan.baidu.com/s/1oyxpJ-9ztyzDIWPJkLT9vg">
                                 <img src="{{ "/assets/images/windows-logo.png" | relative_url }}"  />
                                 <span class="text-muted fw-bold">[64位]Win版下载</span>
                             </a>
-                            <div class="fs-6 text-muted fw-lighter">Win7/Win8/Win10<span class="ms-1 fw-normal">提取码: 7dgv</span></div>
+                            <div class="fs-6 text-muted fw-lighter">Win7/Win8/Win10<span class="ms-1 fw-normal">提取码: ac83</span></div>
                         </div>
 
                         <div class="d-flex flex-column download-container m-1">
@@ -130,11 +130,11 @@ layout: default
         <h2 class="text-center text-white font-alt mb-4">立即下载</h2>
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column  download-container  border-white m-1" >
-                <a class ="d-flex flex-row  align-items-center"  target="_blank" href="https://pan.baidu.com/s/1NSDGUnkNkp4HCiWBa9J_lQ">
+                <a class ="d-flex flex-row  align-items-center"  target="_blank" href="https://pan.baidu.com/s/1oyxpJ-9ztyzDIWPJkLT9vg">
                     <img src="{{ "/assets/images/windows-logo.png" | relative_url }}"  />
                     <span class="text-white fw-bold">[64位]Win版下载</span>
                 </a>
-                <div class="fs-6 text-white fw-lighter">Win7/Win8/Win10<span class="ms-1 fw-normal">提取码: 7dgv</span></div>
+                <div class="fs-6 text-white fw-lighter">Win7/Win8/Win10<span class="ms-1 fw-normal">提取码: ac83</span></div>
             </div>
 
             <div class="d-flex flex-column download-container border-white m-1">
