--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,7 +44,7 @@ layout: default
     <div class="container px-5">
         <div class="row gx-5 justify-content-center">
             <div class="col-xl-8">
-                <div class="h2 fs-1 text-white mb-4">免费，美观，高效，让会员管理更简单</div>
+                <div class="h2 fs-1 text-white mb-4">免费，本地存储，无需联网，让会员管理更简单</div>
             </div>
         </div>
     </div>
