--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
   <div class="container px-5">
-      <a class="navbar-brand fw-bold d-flex flex-row align-items-center " href="#page-top"> 
+      <a class="navbar-brand fw-bold d-flex flex-row align-items-center " href="/#page-top"> 
         <img class="d-none d-sm-block" height="32" src="{{ "/assets/images/logo.png" | relative_url }}" /> 
         <span>七七会员管理系统</span>
       </a>
@@ -12,6 +12,7 @@
           <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
               <li class="nav-item"><a class="nav-link me-lg-3" href="#features">功能特色</a></li>
               <li class="nav-item"><a class="nav-link me-lg-3" href="#download">立即下载</a></li>
+              <li class="nav-item"><a class="nav-link me-lg-3" href="/comment">留言板</a></li>
           </ul>
       </div>
   </div>
