--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,8 +10,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
-              <li class="nav-item"><a class="nav-link me-lg-3" href="#features">功能特色</a></li>
-              <li class="nav-item"><a class="nav-link me-lg-3" href="#download">立即下载</a></li>
+              <li class="nav-item"><a class="nav-link me-lg-3" href="/#features">功能特色</a></li>
+              <li class="nav-item"><a class="nav-link me-lg-3" href="/#download">立即下载</a></li>
               <li class="nav-item"><a class="nav-link me-lg-3" href="/comment">留言板</a></li>
           </ul>
       </div>
