--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,22 +10,22 @@ layout: default
                 <!-- Mashead text and app badges-->
                 <div class="mb-5 mb-lg-0 text-center text-lg-start">
                     <h1 class="display-1 lh-1 mb-3">七七会员系统</h1>
-                    <p class="lead fw-normal text-muted mb-5">免费的会员管理系统，拥有简洁时尚的界面，支持金额卡，次卡，年卡，月卡，周卡等，适用于美容美发，汽车服务，教育培训等各种充值消费的场景，为您的事业保驾护航。</p>
+                    <p class="lead fw-normal text-muted mb-5">免费的会员管理系统，拥有简洁时尚的界面，支持金额卡，次卡，年卡，月卡，周卡等，适用于美容美发，汽车服务，教育培训等各种充值消费的单店场景，为您的事业保驾护航。</p>
                     <div class="d-flex flex-column flex-lg-row align-items-center">
                         <div class="d-flex flex-column  download-container m-1" >
-                            <a class ="d-flex flex-row  align-items-center"  target="_blank" href="https://pan.baidu.com/s/1kTIc5NSd7f-AtHRdufJcig">
+                            <a class ="d-flex flex-row  align-items-center"  target="_blank" href="https://pan.baidu.com/s/1Ap6w-UQg8KDxM1biI1hwhw">
                                 <img src="{{ "/assets/images/windows-logo.png" | relative_url }}"  />
                                 <span class="text-muted fw-bold">[64位]Win版下载</span>
                             </a>
-                            <div class="fs-6 text-muted fw-lighter">Win7/Win8/Win10<span class="ms-1 fw-normal">提取码: depu</span></div>
+                            <div class="fs-6 text-muted fw-lighter">Win7/Win8/Win10<span class="ms-1 fw-normal">提取码: hpu9</span></div>
                         </div>
 
                         <div class="d-flex flex-column download-container m-1">
-                            <a class ="d-flex flex-row  align-items-center" target="_blank" href="https://pan.baidu.com/s/1LkJ7qf5mtmQPs7lp8IINCw">
+                            <a class ="d-flex flex-row  align-items-center" target="_blank" href="https://pan.baidu.com/s/1dpRT-XVqyeQUzJGvSSFhfQ">
                                 <img src="{{ "/assets/images/apple-logo.svg" | relative_url }}"  />
                                 <span class="text-muted fw-bold">Mac版下载</span>
                             </a>
-                            <div class="fs-6 text-muted fw-lighter">macOS 10.11及更高版本 <span class="ms-1 fw-normal">提取码: cmqk</span></div>
+                            <div class="fs-6 text-muted fw-lighter">macOS 10.11及更高版本 <span class="ms-1 fw-normal">提取码: pdx5</span></div>
                         </div>
                     </div>
                 </div>
@@ -44,7 +44,7 @@ layout: default
     <div class="container px-5">
         <div class="row gx-5 justify-content-center">
             <div class="col-xl-8">
-                <div class="h2 fs-1 text-white mb-4">免费，本地存储，无需联网，让会员管理更简单</div>
+                <div class="h2 fs-1 text-white mb-4">免费，本地存储，无需联网</div>
             </div>
         </div>
     </div>
@@ -124,25 +124,43 @@ layout: default
     </div>
 </section>
 
+<aside class="text-center bg-gradient-primary-to-secondary">
+    <div class="container px-5">
+        <div class="row gx-5 justify-content-center">
+            <div class="col-xl-8">
+                <div class="h2 fs-1 text-white mb-4">让会员管理更简单</div>
+            </div>
+        </div>
+    </div>
+</aside>
+
+<section>
+    <div class="container px-5">
+        <div class="row gx-5 align-items-center" id="video">
+            <iframe src="//player.bilibili.com/player.html?bvid=BV1MQ4y1v7Y7&page=1" height="600" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+        </div>
+    </div>
+</section>
+
 <!-- App badge section-->
 <section class="bg-gradient-primary-to-secondary" id="download">
     <div class="container px-5">
         <h2 class="text-center text-white font-alt mb-4">立即下载</h2>
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column  download-container  border-white m-1" >
-                <a class ="d-flex flex-row  align-items-center"  target="_blank" href="https://pan.baidu.com/s/1kTIc5NSd7f-AtHRdufJcig">
+                <a class ="d-flex flex-row  align-items-center"  target="_blank" href="https://pan.baidu.com/s/1Ap6w-UQg8KDxM1biI1hwhw">
                     <img src="{{ "/assets/images/windows-logo.png" | relative_url }}"  />
                     <span class="text-white fw-bold">[64位]Win版下载</span>
                 </a>
-                <div class="fs-6 text-white fw-lighter">Win7/Win8/Win10<span class="ms-1 fw-normal">提取码: depu</span></div>
+                <div class="fs-6 text-white fw-lighter">Win7/Win8/Win10<span class="ms-1 fw-normal">提取码: hpu9</span></div>
             </div>
 
             <div class="d-flex flex-column download-container border-white m-1">
-                <a class ="d-flex flex-row  align-items-center" target="_blank" href="https://pan.baidu.com/s/1LkJ7qf5mtmQPs7lp8IINCw">
+                <a class ="d-flex flex-row  align-items-center" target="_blank" href="https://pan.baidu.com/s/1dpRT-XVqyeQUzJGvSSFhfQ">
                     <img src="{{ "/assets/images/apple-logo.svg" | relative_url }}"  />
                     <span class="text-white fw-bold">Mac版下载</span>
                 </a>
-                <div class="fs-6 text-white fw-lighter">macOS 10.11及更高版本 <span class="ms-1 fw-normal">提取码: cmqk</span></div>
+                <div class="fs-6 text-white fw-lighter">macOS 10.11及更高版本 <span class="ms-1 fw-normal">提取码: pdx5</span></div>
             </div>
 
         </div>
